--- a/package.json
+++ b/package.json
@@ -11,35 +11,36 @@
     "seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "mongoose": "^8.4.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "zod": "^3.23.8",
-    "react-hook-form": "^7.51.5",
     "@hookform/resolvers": "^3.4.2",
     "@tanstack/react-query": "^5.40.0",
-    "recharts": "^2.12.7",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^2.2.0",
-    "next-cloudinary": "^6.6.2",
-    "lucide-react": "^0.379.0",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.3.0"
+    "dotenv": "^17.2.3",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.379.0",
+    "mongoose": "^8.4.0",
+    "next": "14.2.3",
+    "next-cloudinary": "^6.6.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
+    "recharts": "^2.12.7",
+    "tailwind-merge": "^2.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.6",
-    "typescript": "^5.4.5",
-    "tailwindcss": "^3.4.3",
-    "postcss": "^8.4.38",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
-    "tsx": "^4.11.0"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "tsx": "^4.11.0",
+    "typescript": "^5.4.5"
   }
 }
