--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.379.0",
     "mongoose": "^8.4.0",
