--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,35 @@
 # Dependencies
-node_modules/
+node_modules
 .pnp
 .pnp.js
 
-# Build outputs
+# Testing
+coverage
+
+# Next.js
 .next/
 out/
-build/
-dist/
+build
 
-# Testing
-coverage/
+# Misc
+.DS_Store
+*.pem
 
-# Environment
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
+# Vercel
+.vercel
 
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Misc
-*.pem
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
